@@ -1,3 +1,10 @@
+2009-06-30  Corey Minyard <minyard@acm.org>
+
+	* dataxfer.c, devcfg.c, devcfg.h, readconfig.h, utils.h: Add the
+	a TRACEFILE option to trace all I/O to a file., and separate
+	out the defconfig into a separate structure to avoid passing a
+	boatload of things to the config.
+	
 2009-06-30  Sebastian Andrzej Siewior <bigeasy@linutronix.de>
 
 	* controller.c: Fix use after free in controller
